--- a/src/styles/_vars.scss
+++ b/src/styles/_vars.scss
@@ -1,6 +1,6 @@
-$color: #bb5432;
-$color-alt: #f1c5b6;
-$color-light: #fff;
+$color: #74004a;
+$color-alt: #a077cb;
+$color-light: #d892ea;
 $gutter: 0.8rem;
 $font: 'Spartan', sans-serif;
 $transition-fast: 0.2s;
